--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>LinkTree</title>
   </head>
   <body>
@@ -11,7 +12,7 @@
       <img src="./public/profile.jpeg" alt="Devloper" class="profileImage" />
     </div>
     <div class="name">
-        <h3>Jayavrdhan</h3>
+        <h2>@Jayavrdhan</h2>
     </div>
 
     <div class="container">
@@ -20,5 +21,6 @@
         <div><a href="">Gmail</a></div>
         <div><a href="">Phone</a></div>
     </div>
+    <br><br><br><br><br>
   </body>
 </html>
